WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72602
[Qt] REGRESSION(
r100510
): Enable 8 Bit Strings in JavaScriptCore
https://bugs.webkit.org/show_bug.cgi?id=72602
Summary
[Qt] REGRESSION(r100510): Enable 8 Bit Strings in JavaScriptCore
Gabor Loki
Reported
2011-11-17 04:54:12 PST
Four tests were broken after
http://trac.webkit.org/changeset/100510
The pretty diff can be see at
bug 71337
or
http://build.webkit.org/results/Qt%20Linux%20Release/r100512%20(39877)/results.html
Those tests are using several Unicode characters and the FindString function. The tests will be skipped until a fix.
Attachments
Proposed Patch
(3.75 KB, patch)
2011-11-17 11:51 PST
,
Michael Saboff
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gabor Loki
Comment 1
2011-11-17 05:05:43 PST
The tests were skipped in
http://trac.webkit.org/changeset/100608
Michael Saboff
Comment 2
2011-11-17 09:41:13 PST
These tests work fine on Mac. The problem appears to be in WebCore/editing/TextIterator.cpp when WTF_USE_ICU_UNICODE is 0. Continuing to investigate.
Michael Saboff
Comment 3
2011-11-17 11:51:42 PST
Created
attachment 115643
[details]
Proposed Patch I debugged and fixed this issue on a Mac by locally disabling WTF_USE_ICU_UNICODE in WebCore/editing/TextIterator.cpp. The proposed patch fixed the issues, but the expected results for the impacted tests as well as a few others are different on Mac than on qt. Therefore I'd like someone working on qt to verify that this does fix the test failures in a qt build.
Gabor Loki
Comment 4
2011-11-17 13:01:03 PST
> Created an attachment (id=115643) [details]
You are great! I can confirm that the patch fixes those tests. Thank you very much!
Michael Saboff
Comment 5
2011-11-17 13:05:29 PST
(In reply to
comment #4
)
> > Created an attachment (id=115643) [details] [details] > > You are great! I can confirm that the patch fixes those tests. > Thank you very much!
Do you want me to add the changes to relabel the skipped tests?
Gabor Loki
Comment 6
2011-11-17 14:10:21 PST
If you have time to create another patch which relabels those tests as well, please do it. Otherwise I will take care of them tomorrow. Thanks again!
Zoltan Herczeg
Comment 7
2011-11-17 23:23:36 PST
Comment on
attachment 115643
[details]
Proposed Patch rs=me
Gabor Loki
Comment 8
2011-11-17 23:43:20 PST
Comment on
attachment 115643
[details]
Proposed Patch Landed in
http://trac.webkit.org/changeset/100729
Gabor Loki
Comment 9
2011-11-17 23:44:22 PST
The tests are enabled in
http://trac.webkit.org/changeset/100730
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug